minor fix to grade range alignment

--- a/src/styles/sassets/syllabus.scss
+++ b/src/styles/sassets/syllabus.scss
@@ -37,13 +37,21 @@
 .grading-bin {
     display: flex !important;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
+
+    h3 {
+        width: 30%;
+    }
 }
 
 .grade-range {
     font-size: 18px;
     color: #0d6efd;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 30%;
 }
 
 .syllabus-topic {
